@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,20 +25,22 @@
 package jdk.jpackage.internal;
 
 import java.io.IOException;
+import java.lang.System.Logger.Level;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
-import java.util.Collection;
-import java.util.Objects;
-import java.util.Collections;
-import java.util.Set;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.Iterator;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import jdk.jpackage.internal.model.Logger;
 
 /**
  * Builds list of packages providing dynamic libraries for the given set of files.
@@ -70,16 +72,19 @@ public final class LibProvidersLookup {
         // Get the list of unique package names.
         List<String> neededPackages = neededLibs.stream().map(libPath -> {
             try {
-                List<String> packageNames = packageLookup.apply(libPath).filter(
-                        Objects::nonNull).filter(Predicate.not(String::isBlank)).distinct().collect(
-                        Collectors.toList());
-                Log.verbose(String.format("%s is provided by %s", libPath, packageNames));
+                List<String> packageNames = packageLookup.apply(libPath)
+                        .filter(Objects::nonNull)
+                        .filter(Predicate.not(String::isBlank))
+                        .distinct()
+                        .toList();
+                LOGGER.log(Level.TRACE, "{0} is provided by {1}", libPath, packageNames);
                 return packageNames;
             } catch (IOException ex) {
                 // Ignore and keep going
-                Log.verbose(ex);
-                List<String> packageNames = Collections.emptyList();
-                return packageNames;
+                LOGGER.log(Level.ERROR, () -> {
+                    return String.format("Failed to get required packages for [%s]", libPath);
+                }, ex);
+                return List.<String>of();
             }
         }).flatMap(List::stream).sorted().distinct().toList();
 
@@ -99,7 +104,7 @@ public final class LibProvidersLookup {
         }).execute();
 
         if (ret != 0) {
-            // objdump failed. This is OK if the tool was applied to not a binary file
+            // ldd failed. This is OK if the tool was applied to not a binary file
             return Collections.emptyList();
         }
 
@@ -114,7 +119,9 @@ public final class LibProvidersLookup {
             try {
                 libs = getNeededLibsForFile(path);
             } catch (IOException ex) {
-                Log.verbose(ex);
+                LOGGER.log(Level.ERROR, () -> {
+                    return String.format("Failed to get required libraries for [%s]", path);
+                }, ex);
                 libs = Collections.emptyList();
             }
             return libs;
@@ -169,4 +176,6 @@ public final class LibProvidersLookup {
     //
     private static final Pattern LIB_IN_LDD_OUTPUT_REGEX = Pattern.compile(
             "^\\s*\\S+\\s*=>\\s*(\\S+)\\s+\\(0[xX]\\p{XDigit}+\\)");
+
+    private final static System.Logger LOGGER = Logger.MAIN.get();
 }
